# Chatbot

./: .gitignore
chatbot/: .gitignore  README.md  flags.db  pyproject.toml
chatbot/app/: chains.py  constants.py  flags.py  preprocessing.py  server.py
frontendchatbot/: README.md  package-lock.json  package.json
frontendchatbot/src/: index.css
frontendchatbot/src/App/: App.jsx  App.module.css
frontendchatbot/src/Chat/: Chat.jsx  Chat.module.css
